--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "3.2.4",
+    "dotenv-cli": "^10.0.0",
     "supertest": "^7.1.4",
     "vitest": "^3.2.4"
   }
