--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.5",
     "fastify": "^5.6.0",
+    "fastify-raw-body": "^5.0.0",
     "fastify-type-provider-zod": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "pg": "^8.16.3",
     "pino-pretty": "^13.1.1",
+    "stripe": "^18.5.0",
     "zod": "^4.1.5"
   },
   "devDependencies": {
