--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
+    "db:seed": "node --experimental-strip-types --env-file .env ./src/database/seed.ts",
     "pretest": "dotenv -e .env.test drizzle-kit migrate",
     "test": "dotenv -e .env.test vitest run",
     "test:coverage": "dotenv -e .env.test vitest run --coverage"
